[package]
name = "lokerro"
version = "0.2.0"
edition = "2021"
description = "A simple error handling library for libraries and applications alike"
license = "MIT"
repository = "https://github.com/DasBlackfur/lokerro"

[features]
default = []
actix_web = ["actix-web"]

[dependencies]
actix-web = { version = "4", optional = true }

[dev-dependencies]
actix-web = "4"